k8s/kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app-tembici
  labels:
      app: flask-app-tembici
spec:
  selector:
    matchLabels:
      app: flask-app-tembici
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 0%
  template:
    metadata:
      labels:
        app: flask-app-tembici
    spec:
      containers:
        - name: flask-app-tembici
          image: us-central1-docker.pkg.dev/leosete-devops-4/sre-docker-registry/flask-app:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            limits:
              cpu: 100m
              memory: 200Mi
            requests:
              cpu: 50m
              memory: 100Mi
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /api/ping
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 25
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 2
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /api/ping
              port: 8080
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 3
            timeoutSeconds: 2
