k8s/kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-app-tembici
  labels:
      name: flask-app-tembici
spec:
  ports:
    - name: flask
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: flask-app-tembici
  type: NodePort
